[metadata]
name = crawldex-report
version = 0.3.0
description = Python reporter SDK for CrawlDex preflight and outcome reports.
long_description = file: README.md
long_description_content_type = text/markdown
author = CrawlDex
url = https://crawldex.com
keywords = crawldex, browser-agents, reporting, preflight
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
include_package_data = True

[options.packages.find]
where = src
